Fix for Issue #306
Small CSS changes to fix the layout issue on NPC sheet related to footer attributes

--- a/sw5e-global.css
+++ b/sw5e-global.css
@@ -1827,8 +1827,9 @@ input[type="reset"]:disabled {
   line-height: 24px;
   text-align: center;
 }
-.sw5e.sheet.actor.npc .swalt-sheet header .attributes footer.hit-points {
-  display: block;
+.sw5e.sheet.actor.npc .swalt-sheet header .attributes footer {
+  text-align: center;
+  margin-top: -2px;
 }
 .sw5e.sheet.actor.npc .swalt-sheet nav.sheet-navigation {
   grid-template-columns: repeat(6, 1fr);
